--- a/ManifestX/ManifestCreator.xaml
+++ b/ManifestX/ManifestCreator.xaml
@@ -7,8 +7,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-    
-    <Grid ColumnDefinitions="Auto,*" Padding="10">
+
+    <Grid Margin="20,0,0,0" ColumnDefinitions="Auto,*" Padding="10">
         <!-- Side Tree View -->
 
         <!-- Input Form -->
